# temporal-kb

./: .env.example  .gitattributes  .gitignore  CHECKLIST.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
config/: development.yaml.example  production.yaml.example
docs/: api.md  architecture.md  cli-reference.md  deployment.md  installation.md
kb/api/: dependencies.py  main.py
kb/api/migrations/: sqlite_to_postgres.py
kb/api/routes/: entries.py  export.py  links.py  projects.py  search.py  stats.py  tags.py  temporal.py
kb/cli/: main.py  ui.py
kb/cli/commands/: add.py  clip.py  delete.py  edit.py  import_cmd.py  index.py  link.py  search.py  serve.py  show.py  temporal.py
kb/core/: config.py  database.py  models.py  schemas.py
kb/migrations/: sqlite_to_postgres.py
kb/services/: entry_service.py  import_service.py  link_service.py  search_service.py  temporal_service.py
kb/services/importers/: __init__.py  base.py  browser_importer.py  chat_importer.py  email_importer.py  markdown_importer.py
kb/storage/: file_manager.py  git_manager.py  vector_store.py
kb/utils/: id_generator.py  text_processing.py
scripts/: backup.sh  deploy.sh  setup_files.sh
temporal-kb-mobile/: App.tsx  README.md  app.json  package-lock.json  package.json
temporal-kb-mobile/src/api/: client.ts
temporal-kb-mobile/src/components/: EmptyState.tsx  EntryCard.tsx  LoadingState.tsx  SearchBar.tsx  index.ts
temporal-kb-mobile/src/hooks/: useEntries.ts
temporal-kb-mobile/src/navigation/: AppNavigator.tsx  types.ts
temporal-kb-mobile/src/screens/: CreateEntryScreen.tsx  DiscoverScreen.tsx  EditEntryScreen.tsx  EntryDetailScreen.tsx  HomeScreen.tsx  ProfileScreen.tsx  SearchScreen.tsx  SettingsScreen.tsx  index.ts
temporal-kb-mobile/src/store/: index.ts
temporal-kb-mobile/src/theme/: index.ts
temporal-kb-mobile/src/types/: index.ts
tests/: conftest.py  test_cli.py  test_entry_service.py  test_models.py
